# llm

./: .dockerignore  .env.example  Dockerfile  README.md  call-kimi-k2.5.sh  custom_resolvers.py  docker-compose.yml  openclaw.example.json  pyproject.toml  test_all_models.sh
app/: __init__.py  config.py  env.py  gateway.py  main.py
app/auth/: __init__.py  strategies.py
app/providers/: __init__.py  base.py  factory.py  router.py
config/: model_registry.example.json  model_registry.json
tests/: test_custom_resolvers.py  test_gateway_sse_merge.py  test_gateway_stream_format.py  test_model_config.py  test_provider_defaults.py  test_provider_factory.py  test_provider_paths.py  test_qwen_signature.py  test_router.py
