[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-corp-gateway"
version = "0.1.0"
description = "OpenAI-compatible gateway for connecting internal company models to OpenClaw"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
corp-gateway = "app.main:run"

[tool.setuptools]
py-modules = ["custom_resolvers"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "config*"]
namespaces = false

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
